--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: "DM Sans", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -29,7 +29,8 @@ html::-webkit-scrollbar-thumb {
   border-radius: 5rem;
 }
 
-section, footer {
+section,
+footer {
   padding: 2rem 9%;
 }
 
@@ -127,7 +128,8 @@ section, footer {
   font-size: 6.5rem;
   color: #443;
   text-transform: uppercase;
-  text-shadow: 1px 1px 0 #999, 2px 2px 0 #999, 3px 3px 0 #999, 4px 4px 0 #999, 5px 5px 0 #999, 6px 6px 0 rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px 0 #999, 2px 2px 0 #999, 3px 3px 0 #999, 4px 4px 0 #999,
+    5px 5px 0 #999, 6px 6px 0 rgba(0, 0, 0, 0.2);
 }
 .home .row .image {
   flex: 1 1 42rem;
@@ -152,7 +154,8 @@ section, footer {
 }
 
 @keyframes float {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0rem);
   }
   50% {
@@ -160,7 +163,8 @@ section, footer {
   }
 }
 @keyframes aboutImage {
-  0%, 100% {
+  0%,
+  100% {
     transform: scale(0.9);
     border-radius: 4% 95% 6% 95%/95% 4% 92% 5%;
   }
@@ -418,7 +422,8 @@ section, footer {
     padding: 2rem;
   }
 
-  section, footer {
+  section,
+  footer {
     padding: 2rem;
   }
 }
